// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debemos realizar pruebas a <GifExpertApp/> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="Dota"
      key="Dota"
    />
  </ol>
</Fragment>
`;

exports[`Debemos realizar pruebas a <GifExpertApp/> Match con el Snapshot  1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
